--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
 
 <div class="btn">
-    <h2 class="myscore"></h2>
+    <h2 class="myScore"></h2>
     <button onclick="next()">Next</button>
 </div>
         </div>
